--- a/templates/updaing.html
+++ b/templates/updaing.html
@@ -21,6 +21,46 @@
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/font-awesome/css/all.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/main.css' %}" rel="stylesheet">
+
+    <style>
+        .progress-outer{
+            background: #fff;
+            border-radius: 50px;
+            padding: 25px;
+            margin: 10px 0;
+            box-shadow: 0 0  10px rgba(209, 219, 231,0.7);
+        }
+        .progress{
+            height: 27px;
+            margin: 0;
+            overflow: visible;
+            border-radius: 50px;
+            background: #eaedf3;
+            box-shadow: inset 0 10px  10px rgba(244, 245, 250,0.9);
+        }
+        .progress .progress-bar{
+            border-radius: 50px;
+        }
+        .progress .progress-value{
+            position: relative;
+            left: -45px;
+            top: 13px;
+            font-size: 14px;
+            font-weight: bold;
+            color: #fff;
+            letter-spacing: 2px;
+        }
+        .progress-bar.active{
+            animation: reverse progress-bar-stripes 0.40s linear infinite, animate-positive 2s;
+        }
+        @-webkit-keyframes animate-positive{
+            0% { width: 0%; }
+        }
+        @keyframes animate-positive {
+            0% { width: 0%; }
+        }
+    </style>
+
   </head>
   
     <body id="top">
@@ -35,33 +75,16 @@
                 <div class="inner cover">
                     <h1 class="cover-heading">We are on the WAY</h1>
                     <p class="lead cover-copy">UPDATING : Stay tuned as we get our server ready again.</p>
+                    <div class="progress-outer">
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-info progress-bar-striped active" style="width:77%; box-shadow:-1px 10px 10px rgba(91, 192, 222, 0.7);"></div>
+                            <div class="progress-value">77%</div>
+                        </div>
+                    </div>
                 </div>
                 <div class="mastfoot">
                     <div class="inner">
                     <p>&copy; Design: <a href="https://cloudminepro.com/" target="_blank">CMP</a>.</p>
-                    </div>
-                </div>
-                <div class="modal fade" id="subscribeModal" tabindex="-1" role="dialog" aria-labelledby="subscribeModalLabel" aria-hidden="true">
-                    <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                        <h5 class="modal-title" id="subscribeModalLabel">Get Notified on Launch:</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                        </div>
-                        <div class="modal-body">
-                        <form>
-                            <div class="form-group">
-                            <label for="recipient-name" class="form-control-label">Enter you e-mail to get notified when we launch</label>
-                            <input type="text" class="form-control" id="recipient-name" placeholder="your-name@example.com">
-                            </div>
-                        </form>
-                        </div>
-                        <div class="modal-footer">
-                        <button type="button" class="btn btn-default">Subscribe</button>
-                        </div>
-                    </div>
                     </div>
                 </div>
             </div>
